<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/laranja"
    android:orientation="vertical" >

    <TextView
        style="@style/textViewLabelCad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cad_livro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/foto_livro"
            android:layout_width="146dp"
            android:layout_height="152dp"
            android:src="@drawable/ic_cad_pessoa256" />

        <ImageButton
            android:id="@+id/btfotoLivro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tirarFoto"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:src="@drawable/ic_device_camera_capture_photo_64"
            android:text="@string/bt_foto" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="0"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/tableRow0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/textViewCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cad_livro_titulo"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editTitulo"
                    style="@drawable/rounded_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" >
                </EditText>
            </TableRow>
<!--  -->
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/textViewCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cad_livro_serie"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editSerie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />
            </TableRow>
<!--  
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/textViewCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cad_livro_exemplares"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/ediExemplar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />
            </TableRow>
-->            
        </TableLayout>

        <Button
            android:id="@+id/btCadLivro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_cadastrar" />

        <ListView
            android:id="@+id/listViewCadLivro"
            style="@style/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</LinearLayout>