<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/laranja"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dip"
            android:text="@string/cad_emp_pessoa" />

        <Spinner
            android:id="@+id/spinner_emprestimo_pessoa"
            android:layout_width="match_parent"           
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          	android:textSize="20dip"
            android:text="@string/cad_emp_livro" />

        <Spinner
            android:id="@+id/spinner_emprestimo_livro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TableLayout
        android:stretchColumns="0,1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dip"
                android:text="@string/cad_emp_dt_devolucao" />
		
            <EditText
                android:id="@+id/editEmprestimo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" >
            </EditText>
            <!--             
            <DatePicker 
                android:id="@+id/dateEmprestimo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            -->
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btAddLivro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"               
                android:text="Inserir Lista" />

            <Button
                android:id="@+id/btEmprestimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="Emprestar" />
        </TableRow>
    </TableLayout>

   

    <ListView
        android:id="@+id/listViewEmprestimo"
        style="@style/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>